--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  font-family: "Inter", ui-sans-serif, system-ui, -apple-system, Segoe UI,
+    Roboto, Arial, sans-serif;
+}
+
+@supports (font-variation-settings: normal) {
+  html {
+    font-family: "Inter var", ui-sans-serif, system-ui, -apple-system, Segoe UI,
+      Roboto, Arial, sans-serif;
+  }
+}
+
+body {
+  background-color: oklch(97% 0 0);
+}
